fixed spacing bug

--- a/src/components/OverviewRow/OverviewRow.module.css
+++ b/src/components/OverviewRow/OverviewRow.module.css
@@ -1,7 +1,3 @@
 tr td.td-text {
     padding: 5px !important;
 }
-
-.tableRowSpacer {
-    height: 20px;
-}
